test/error/22.c
int func(float b);

int func(int a) {
    ;
}